# YourAI

./: EVALS_SecureContextPipeline.md  GOLDEN_DATASET_RULES.md  ONBOARDING.md  PRD_SecureContextPipeline.md  test_harness.py
secure-context-pipeline/: .env.example  .gitignore  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-nlp.txt  requirements.txt
secure-context-pipeline/.github/workflows/: ci.yml
secure-context-pipeline/deploy/: README.md  k8s.yaml  launch.sh
secure-context-pipeline/deploy/aws/: README.md  main.tf  outputs.tf  push_image.sh  tfplan  variables.tf
secure-context-pipeline/scripts/: gen_keys.py  pii_leakage_scan.py  preflight.py  recall_benchmark.py
secure-context-pipeline/secure_context_pipeline/: __init__.py  config.py  models.py
secure-context-pipeline/secure_context_pipeline/api/: __init__.py  app.py  samples.py  ui.py
secure-context-pipeline/secure_context_pipeline/audit/: __init__.py  audit_log.py
secure-context-pipeline/secure_context_pipeline/deobfuscation/: __init__.py  engine.py
secure-context-pipeline/secure_context_pipeline/detection/: __init__.py  detector.py  patterns.py
secure-context-pipeline/secure_context_pipeline/obfuscation/: __init__.py  chunking.py  engine.py
secure-context-pipeline/secure_context_pipeline/pipeline/: __init__.py  events.py  (+4 more)
secure-context-pipeline/tests/: conftest.py  test_api.py  test_audit_compliance.py  test_chunking_streaming.py  test_deobfuscation.py  test_detection.py  test_document_store.py  test_edge_cases.py  test_golden_dataset.py  test_key_management.py  test_obfuscation.py  test_performance.py  test_pipeline.py  test_postgres_vault.py  test_red_team.py  test_residual_gate.py  test_vault.py
(+35 files in other folders)
