[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-context-pipeline"
version = "2.0.0"
description = "PII/PHI obfuscation pipeline for safely calling external LLM providers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "YourAI Engineering" }]

# Core runtime dependencies. These all ship pure-Python or abi3 wheels and install
# cleanly on a local venv (incl. Python 3.13/3.14) as well as in the container.
dependencies = [
    "cryptography>=42.0",
    "faker>=24.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "anthropic>=0.39",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
# Type-safe settings. Optional: config.py falls back to a stdlib loader if absent.
settings = ["pydantic>=2.6", "pydantic-settings>=2.2"]
# Full NER detection stack. Installed in the Docker image (Python 3.11). The
# detector degrades to its regex/heuristic name path when these are missing.
nlp = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7"]
openai = ["openai>=1.40"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9", "gunicorn>=21.2"]
postgres = ["asyncpg>=0.29"]
kms = ["boto3>=1.34"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=4.0",
    "pytest-mock>=3.11",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
include = ["secure_context_pipeline*"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
